--- a/Spanish/main/FM.apk/res/values-es/strings.xml
+++ b/Spanish/main/FM.apk/res/values-es/strings.xml
@@ -1,66 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FM Radio</string>
-    <string name="menu_record_start">Start recording</string>
-    <string name="menu_record_stop">Stop recording</string>
-    <string name="menu_sleep">Sleep timer</string>
-    <string name="menu_sleep_cancel">Cancel sleep timer</string>
-    <string name="menu_record_list">Recordings</string>
-    <string name="menu_scan_start">Scan stations</string>
-    <string name="menu_select_station">Select station</string>
-    <string name="menu_new_station">Add new station</string>
-    <string name="menu_save_station_list">Add to list</string>
-    <string name="menu_save_station_presets">Add to presets</string>
-    <string name="menu_exit">Exit</string>
-    <string name="title_select_station">Select station - %s</string>
-    <string name="dialog_sleep_title">Set sleep timer</string>
-    <string name="search_dialog_title">Scan stations</string>
-    <string name="fmradio_clear_confirm_msg">All presets will be deleted.</string>
-    <string name="radio_text_string">This is the long radio text string message that needs to scroll</string>
-    <string name="frequency_string" />
-    <string name="default_station">FM</string>
-    <string name="default_blank" />
-    <string name="transmit_msg_string">Transmitting at:</string>
-    <string name="set">Set</string>
-    <string name="stations_list">Station list</string>
-    <string name="stations_list_empty">No presets</string>
-    <string name="station_freq_format">%sMHz</string>
-    <string name="alert_message_delete_station">This preset will be deleted.</string>
-    <string name="msg_noantenna_message">No headphones detected. Some functions may not be available.</string>
-    <string name="msg_do_not_support_fm">"This device doesn't support FM Radio"</string>
-    <string name="exit_fm">Exit</string>
-    <string name="toast_sleep_mode">Radio will stop playing in %s</string>
-    <string name="toast_sleep_mode_exit">Sleep timer canceled</string>
-    <string name="record_file_location_format">Saved to %s</string>
-    <string name="record_completed">Recording completed</string>
-    <string name="turn_off_fm">Turn off FM</string>
-    <string name="turn_on_speaker_phone">Turn on speaker phone</string>
-    <string name="view_stations_list">View stations list</string>
-    <string name="pre_station">Previous station</string>
-    <string name="next_station">Next station</string>
-    <string name="reduce_af">Reduce frequency</string>
-    <string name="increase_af">Increase frequency</string>
-    <string name="new_frequency">New frequency</string>
-    <string name="alert_invalid_frequency">Invalid frequency</string>
-    <string name="hint_frequency">Frequency: %1$s ~ %2$s</string>
-    <string name="hint_label">Label</string>
-    <string name="frequency_mhz_fomart">%sMHZ</string>
-    <string name="context_menu_title">%sMHZ</string>
-    <string name="context_menu_item_edit">Edit</string>
-    <string name="context_menu_item_delete">Delete</string>
-    <string name="context_menu_item_favorite">Add to presets</string>
-    <string name="context_menu_item_unfavorite">Remove from presets</string>
-    <string name="toast_channel_searched">Scanned %1$d stations</string>
-    <string name="label_recording">Recording: %s</string>
-    <string name="toast_added_to_presets">Added to presets</string>
-    <string name="toast_added_to_list">Added to list</string>
-    <string name="toast_removed_from_presets">Removed from presets</string>
-    <string name="toast_fm_starting">Starting…</string>
-    <string name="toast_fm_seeking">Seeking…</string>
-    <string name="station_check_favorite">Add to presets</string>
-    <string name="toast_fm_recorder_internal_error">FM recording error</string>
-    <string name="toast_fm_recorder_storage_full">"Can't continue recording: not enough space"</string>
-    <string name="toast_fm_error_startfailed">Recordding error.Another app may be using the recording function. Please check and try again.</string>
-    <string name="toast_fm_recorder_access_error">"Can't record while you're in Guest mode"</string>
-    <string name="msg_fm_starting">Starting…</string>
+    <string name="app_name">"FM"</string>
+    <string name="menu_record_start">"Inicie la grabación"</string>
+    <string name="menu_record_stop">"Pare la grabación"</string>
+    <string name="menu_sleep">"Sleep timer"</string>
+    <string name="menu_sleep_cancel">"Cancelar temporizador de apagado"</string>
+    <string name="menu_record_list">"Grabaciones"</string>
+    <string name="menu_scan_start">"Estaciones de escaneado"</string>
+    <string name="menu_select_station">"Seleccionar canal"</string>
+    <string name="menu_new_station">"Añadir nueva estación"</string>
+    <string name="menu_save_station_list">"Añadir a la lista"</string>
+    <string name="menu_save_station_presets">"Añadir a presets"</string>
+    <string name="menu_exit">"Salir"</string>
+    <string name="title_select_station">"Seleccione la estación - %s"</string>
+    <string name="dialog_sleep_title">"Ajuste del temporizador"</string>
+    <string name="search_dialog_title">"Estaciones de escaneado"</string>
+    <string name="fmradio_clear_confirm_msg">"Se borrarán todos los presets."</string>
+    <string name="radio_text_string">"Este es el mensaje de cadena de texto largo radio que necesita para desplazarse"</string>
+    <string name="frequency_string">""</string>
+    <string name="default_station">"FM"</string>
+    <string name="default_blank">""</string>
+    <string name="transmit_msg_string">"Transmitiendo en:"</string>
+    <string name="set">"Ajustar"</string>
+    <string name="stations_list">"Lista de emisoras"</string>
+    <string name="stations_list_empty">"No hay presets"</string>
+    <string name="station_freq_format">"%s MHz"</string>
+    <string name="alert_message_delete_station">"Se borrará esta preestablecido."</string>
+    <string name="msg_noantenna_message">"No hay auriculares detectados. Algunas funciones pueden no estar disponibles."</string>
+    <string name="msg_do_not_support_fm">"Este dispositivo no admite la Radio FM"</string>
+    <string name="exit_fm">"Salir"</string>
+    <string name="toast_sleep_mode">"Radio dejará de reproducirse en %s"</string>
+    <string name="toast_sleep_mode_exit">"Sleep timer cancelado"</string>
+    <string name="record_file_location_format">"Guardado en %s"</string>
+    <string name="record_completed">"Grabación completada"</string>
+    <string name="turn_off_fm">"Apague FM"</string>
+    <string name="turn_on_speaker_phone">"Encienda el altavoz del teléfono"</string>
+    <string name="view_stations_list">"Ir al listado de estaciones"</string>
+    <string name="pre_station">"Estación anterior"</string>
+    <string name="next_station">"La próxima estación"</string>
+    <string name="reduce_af">"Reducir la frecuencia"</string>
+    <string name="increase_af">"Aumentar la frecuencia de"</string>
+    <string name="new_frequency">"Nueva frecuencia"</string>
+    <string name="alert_invalid_frequency">"Frecuencia no válida"</string>
+    <string name="hint_frequency">"Frecuencia: %1$s ~ %2$s"</string>
+    <string name="hint_label">"Etiqueta"</string>
+    <string name="frequency_mhz_fomart">"%s MHZ"</string>
+    <string name="context_menu_title">"%s MHZ"</string>
+    <string name="context_menu_item_edit">"Editar"</string>
+    <string name="context_menu_item_delete">"Eliminar"</string>
+    <string name="context_menu_item_favorite">"Añadir a presets"</string>
+    <string name="context_menu_item_unfavorite">"Eliminar de presets"</string>
+    <string name="toast_channel_searched">"Escaneadas %1$d estaciones"</string>
+    <string name="label_recording">"Grabación: %s"</string>
+    <string name="toast_added_to_presets">"Sumado a presets"</string>
+    <string name="toast_added_to_list">"Añadido a la lista"</string>
+    <string name="toast_removed_from_presets">"Fuera presets"</string>
+    <string name="toast_fm_starting">"A partir ..."</string>
+    <string name="toast_fm_seeking">"Buscando ..."</string>
+    <string name="station_check_favorite">"Añadir a presets"</string>
+    <string name="toast_fm_recorder_internal_error">"Error de grabación de FM"</string>
+    <string name="toast_fm_recorder_storage_full">"No se puede continuar la grabación: no hay suficiente espacio"</string>
+    <string name="toast_fm_error_startfailed">"Recordding aplicación error.Another puede estar usando la función de grabación. Por favor verifique e inténtelo de nuevo."</string>
+    <string name="toast_fm_recorder_access_error">"No se puede grabar mientras está en modo de invitado"</string>
+    <string name="msg_fm_starting">"A partir ..."</string>
 </resources>
