--- a/Spanish/main/Settings.apk/res/values-es/strings.xml
+++ b/Spanish/main/Settings.apk/res/values-es/strings.xml
@@ -303,7 +303,7 @@
   <string name="backup_lock_settings_picker_title">Bloqueo alternativo</string>
   <string name="unlock_set_unlock_launch_picker_title">Bloqueo de pantalla</string>
   <string name="unlock_set_unlock_launch_picker_change_title">Cambiar pantalla de bloqueo</string>
-  <string name="unlock_set_unlock_launch_picker_change_summary">Cambia o inhabilit seguridad contraseña, PIN o patrón</string>
+  <string name="unlock_set_unlock_launch_picker_change_summary">Cambia o inhabilita seguridad contraseña, PIN o patrón</string>
   <string name="unlock_set_unlock_launch_picker_enable_summary">Elige un método para bloquear la pantalla.</string>
   <string name="unlock_backup_info_summary">"Si el desbloqueo facial no te reconoce, ¿cómo quieres desbloquear la pantalla?"</string>
   <string name="unlock_set_unlock_off_title">Sin seguridad</string>
@@ -1271,7 +1271,6 @@
   <string name="battery_stats_wifi_running_label">WiFi</string>
   <string name="battery_stats_wake_lock_label">Activa</string>
   <string name="battery_stats_phone_signal_label">Señal de red móvil</string>
-  <string name="battery_stats_last_duration">@string/menu_stats_last_unplugged</string>
   <string name="awake">Tiempo de actividad del dispositivo</string>
   <string name="wifi_on_time">Tiempo de conexión WiFi</string>
   <string name="bluetooth_on_time">Tiempo de conexión WiFi</string>
@@ -2202,19 +2201,19 @@
   <string name="dolby_roomsize_low">Pequeño</string>
   <string name="dolby_roomsize_normal">Normal</string>
   <string name="dolby_roomsize_high">Grande</string>
-  <string name="eq_flat">Flat</string>
+  <string name="eq_flat">Lineal</string>
   <string name="eq_rock">Rock</string>
   <string name="eq_jazz">Jazz</string>
   <string name="eq_pop">Pop</string>
-  <string name="eq_classical">Classical</string>
+  <string name="eq_classical">Clásica</string>
   <string name="eq_rb">R &amp; B</string>
   <string name="eq_hiphop">Hip Hop</string>
   <string name="eq_blues">Blues</string>
-  <string name="eq_electronic">Electronic</string>
+  <string name="eq_electronic">Electrónica</string>
   <string name="eq_country">Country</string>
   <string name="eq_dance">Dance</string>
   <string name="eq_metal">Metal</string>
-  <string name="eq_delete">Remove</string>
+  <string name="eq_delete">Eliminar</string>
   <string name="eq_delete_success">Hecho.</string>
   <string name="eq_auto">Personalizado</string>
   <string name="eq_preset_create">Crear</string>
@@ -2572,16 +2571,15 @@
   <string name="custom_build_version">Versión de compilación personalizada</string>
   <string name="software_update">Servicio de actualización de software</string>
   <string name="mota_system_update_summary">Compruebe la actualización del sistema servidor</string>
-  <string name="software_updates_more_title">Software updates</string>
-  <string name="software_updates_more_summary">Check for new version software</string>
-  <string name="software_updates_scomo_summary">Check new version for application</string>
-  <string name="scomo_settings_title">Software update service</string>
-  <string name="battery_level">%s%%</string>
-  <string name="screen_timeout_CU">Screen timeout</string>
-  <string name="landscape_launcher_title">Landscape Launcher</string>
-  <string name="landscape_launcher_none">None</string>
-  <string name="tvout_settings">TV out</string>
-  <string name="tvout_settings_summary">TV out settings</string>
+  <string name="software_updates_more_title">Actualizaciones de Software</string>
+  <string name="software_updates_more_summary">Comprobar nuevas versiones de software</string>
+  <string name="software_updates_scomo_summary">Comprobar nueva versión de aplicación</string>
+  <string name="scomo_settings_title">Servicio de actualizaciones</string>
+  <string name="screen_timeout_CU">Tiempo de apagado</string>
+  <string name="landscape_launcher_title">Launcher horizontal</string>
+  <string name="landscape_launcher_none">Ninguno</string>
+  <string name="tvout_settings">Salida TV</string>
+  <string name="tvout_settings_summary">Ajutes salida TV</string>
   <string name="tv_system_title">Sistema de TV</string>
   <string name="hdmi_toggler">HDMI</string>
   <string name="hdmi_settings">Configuración de HDMI</string>
@@ -2695,9 +2693,9 @@
   <string name="eap_sim_aka_no_sim_error">Debe insertar una tarjeta sim para utilizar EAP-SIM/AKA</string>
   <string name="eap_sim_aka_no_sim_slot_selected">Debe seleccionar una ranura sim utilizar EAP-SIM/AKA</string>
   <string name="wifi_security_wapi_psk">WAPI PSK</string>
-  <string name="wifi_security_wapi_certificate">WAPI Certificate</string>
-  <string name="wapi_user_certificate">User certificate</string>
-  <string name="wapi_as_certificate">ASE certificate</string>
+  <string name="wifi_security_wapi_certificate">WAPI Certificado</string>
+  <string name="wapi_user_certificate">Certificado de usuario</string>
+  <string name="wapi_as_certificate">ASE certificado</string>
   <string name="wifi_hex_password">Contraseña hexadecimal.</string>
   <string name="wifi_WEP_transmit_key">Transmitir clave</string>
   <string name="wifi_WEP_secury_key">Clave segura</string>
@@ -2705,26 +2703,26 @@
   <string name="wifi_disconnect">Desconectar</string>
   <string name="wifi_menu_disconnect">Desconectar de la red</string>
   <string name="trust_access_points">Puntos de acceso creíble por defecto</string>
-  <string name="configed_access_points">Credible access points</string>
-  <string name="new_access_points">Unknown access points</string>
-  <string name="apn_list_category_title">Access point list</string>
-  <string name="data_conn_category_title">Data connection</string>
-  <string name="wifi_gprs_selector_title">Network selector</string>
-  <string name="data_enabler_title">Data enabled</string>
-  <string name="data_enabler_summary">Enable data access over Mobile network</string>
-  <string name="data_enabler_waiting_message">Please wait…</string>
+  <string name="configed_access_points">Punto de acceso confiable</string>
+  <string name="new_access_points">Punto de acceso desconocido</string>
+  <string name="apn_list_category_title">Lista puntos de acceso</string>
+  <string name="data_conn_category_title">Conexión de datos</string>
+  <string name="wifi_gprs_selector_title">Selector de red</string>
+  <string name="data_enabler_title">Datos habilitados</string>
+  <string name="data_enabler_summary">Habilitar acceso mediante datos móviles</string>
+  <string name="data_enabler_waiting_message">Espera…</string>
   <string name="wifi_tether_fix_channel_width_text">20 MHz</string>
   <string name="wifi_tether_auto_channel_text">Auto</string>
   <string name="wifi_tether_auto_channel_width_text">Auto 20/40 MHz</string>
-  <string name="wifi_channel">Preferred Channel</string>
-  <string name="wifi_channel_width">Channel Width</string>
-  <string name="pch_toggle_title">GPRS transfer prefer mode</string>
-  <string name="pch_data_prefer_summary_off">Data prefer</string>
-  <string name="pch_call_prefer_summary_on">Call prefer</string>
-  <string name="pch_warning_message">Data transmission rate will decline.</string>
-  <string name="schedule_power_on_off_settings_title">Scheduled power on &amp; off</string>
-  <string name="usb_bicr_title">Built-in CD-ROM</string>
-  <string name="usb_bicr_summary">Show a virtual CD-ROM containing some useful software.</string>
+  <string name="wifi_channel">Canal preferido</string>
+  <string name="wifi_channel_width">Ancho de canal</string>
+  <string name="pch_toggle_title">Modo preferido de transmisión GPRS</string>
+  <string name="pch_data_prefer_summary_off">Preferencia Datos</string>
+  <string name="pch_call_prefer_summary_on">Preferencia Llamadas</string>
+  <string name="pch_warning_message">Velocidad de transmisión de datos se reducirá.</string>
+  <string name="schedule_power_on_off_settings_title">Programar encendido y apagado</string>
+  <string name="usb_bicr_title">CD-ROM</string>
+  <string name="usb_bicr_summary">Mostrar un CD-ROM virtual que contiene algún tipo de software útil.</string>
   <string name="select_memory">Disco de escritura predeterminado</string>
   <string name="ipo_title">Inicio rápido</string>
   <string name="ipo_summary_on">Desactivar el inicio rápido</string>
@@ -2858,7 +2856,7 @@
   <string name="enable_wifi_tether">Habilitar Zona WiFi</string>
   <string name="enable_gps">Activar gps</string>
   <string name="enable_gps_confirm_message">Se necesita una conexión a internet para obtener los datos de posicionamiento (EPO, A-GPS). ¿Quieres activar el GPS?</string>
-  <string name="gsm_to_wifi_connect_type_title">Celulares -&gt; WLAN</string>
+  <string name="gsm_to_wifi_connect_type_title">Móviles -&gt; WLAN</string>
   <string name="wifi_connect_ap_summary">Especificar el tipo de conexión de red</string>
   <string name="wifi_connect_type_title">Tipo de conexión automática</string>
   <string name="select_ssid_type_title">Tipo de conexión de red</string>
@@ -3037,4 +3035,5 @@ Nota: puedes tocar tres veces la pantalla para ampliar el contenido en cualquier
     <string name="title_font">Fuente</string>
     <string name="title_font_current">Actual</string>
 	<string name="use_network_warning">Necesitas una conexión a internet para sincronizar con Mi Cuenta</string>
+	<string name="google_backup_section_title">Copia de seguridad Google</string>
 	</resources>
