--- a/Spanish/main/Calendar.apk/res/values-es/strings.xml
+++ b/Spanish/main/Calendar.apk/res/values-es/strings.xml
@@ -193,4 +193,16 @@
   <string name="copy_email">Copiar la dirección email</string>
   <string name="copy_number">Copia número de teléfono</string>
   <string name="done">Volver</string>
+  <string name="today_no_events">No hay eventos hoy</string>
+  <string name="button_day">D</string>
+  <string name="button_week">S</string>
+  <string name="button_month">M</string>
+  <string name="action_bar_today">H</string>
+  <string name="event_show_more">Más opciones</string>
+  <string name="time_zone">Zona horaria</string>
+  <string name="edit_event_confirm_message">¿Descartar cambios en evento?</string>
+  <string name="event_info_when">"Cuándo: "</string>
+    <string name="event_info_repeat">"Repetir: "</string>
+    <string name="event_info_where">"Dónde: "</string>
+    <string name="event_info_descrip">"Descripción: "</string>
 </resources>
