--- a/Spanish/main/NetworkAssistant2.apk/res/values-es/strings.xml
+++ b/Spanish/main/NetworkAssistant2.apk/res/values-es/strings.xml
@@ -169,7 +169,7 @@
     <string name="free_time_traffic_hint">"Ingrese límite de datos de menor actividad"</string>
     <string name="traffic_protection_label">"Advertencia de uso de datos"</string>
     <string name="traffic_protection_summary">"Establecer alertas para cuando el uso de datos llega a un cierto nivel"</string>
-    <string name="traffic_protection_unknown">"Configurar más tarde"</string>
+    <string name="traffic_protection_unknown"><u>"Configurar más tarde"</u></string>
     <string name="traffic_protection_text_hint">"Establecer el límite de uso de datos para %s"</string>
     <string name="traffic_protection_next">"Siguiente"</string>
     <string name="traffic_protection_data_usage_summary">"Establecer alertas de uso de los datos para evitar exceder los límites de datos mensuales de su plan de datos."</string>
